tests/snapshots/run_wpt_conformance__coreml_logicalOr_uint8_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
logical_or.https.any.js logicalOr uint8 0D scalar, coreml
 Failed to dispatch graph: coreml runtime failed: input dtype mismatch: model expects 4-byte elements (code 65568), but input is Uint8 (1-byte); type conversion is not supported for this input

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: u8[];
    inputB: u8[];
  }

  nodes {
    [output] = logicalOr(inputA, inputB, label="");
  }

  outputs { output; }
}
