tests/snapshots/run_wpt_conformance__coreml_logicalOr_uint8_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
logical_or.https.any.js logicalOr uint8 1D constant tensors, coreml
 logical_or :: logicalOr uint8 1D constant tensors: index 1: actual=0 expected=1 tolerance=0
  inputs: inputA: [0, 0, 1, 1, 0, 0, 2, 2, 0, 0, 8, 8, 0, 0, 8, 8, 0, 0, 255, 255, 0, 0, 255, 255] (constant); inputB: [0, 1, 0, 1, 0, 2, 0, 2, 0, 8, 0, 8, 0, 2, 0, 2, 0, 255, 0, 255, 0, 8, 0, 8] (constant)
  expected output: [0, 1, 1, 1, 0, 1, 1, 1, 0, 1 ...] (len=24)
  actual output: [0, 0, 0, 0, 0, 0, 128, 63, 0, 0 ...] (len=24)
  expected output full nd:
[0, 1, 1, 1, 0, 1, 1, 1, 0, 1, ...] (len=24, shape=[24])
  actual output full nd:
[0, 0, 0, 0, 0, 0, 128, 63, 0, 0, ...] (len=24, shape=[24])

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: u8[24] @bytes([0, 0, 1, 1, 0, 0, 2, 2, 0, 0, 8, 8, 0, 0, 8, 8, 0, 0, 255, 255, 0, 0, 255, 255]);
    operand_1: u8[24] @bytes([0, 1, 0, 1, 0, 2, 0, 2, 0, 8, 0, 8, 0, 2, 0, 2, 0, 255, 0, 255, 0, 8, 0, 8]);
  }

  nodes {
    [output] = logicalOr(operand_0, operand_1, label="");
  }

  outputs { output; }
}
